update profile, request to booking is done, also myOffers
