# backend/modules/Offer/api/offer.route.js
@@ -2,15 +2,16 @@
 const router=require('express').Router()
 const { ConfigureMulterStorageMultiple, ConfigureMulterStorage } = require('../../../config/uploadFile')
 const successMessages = require("../../../messages/successMessages")
-const PreProcessing = require("../../../middleware/Request/PreProcessing")("offer")
+const PreProcessing = require("../../../middleware/Request/PreProcessing")
 const PreProcessingWithoutToken = require("../../../middleware/Request/PreProcessingWithoutToken")
 const PostErrorProcessing = require("../../../middleware/Response/PostErrorProcessing")
 const PostSuccessProcessing = require("../../../middleware/Response/PostSuccessProcessing")
 const EntityNames = require('../../../Types/EntityNames')
 const { UploadValidMimeTypes, UploadedFileTypes } = require('../../../Types/UploadFileTypes')
-const { createOffer, editOffer, getOffer, getOffers, updateOffer, deleteOffer, offerTemplate, uploadOfferImages } = require("../controller/offer.controller")
+const { createOffer, editOffer, getOffer, getOffers, updateOffer, deleteOffer, offerTemplate, uploadOfferImages, getMyOffers, addRequests } = require("../controller/offer.controller")
 //todo: add preprocessing later
-router.post("/create",PreProcessing,async (req, res) => {
+const entityName = EntityNames.offer
+router.post("/create", PreProcessing(entityName) ,async (req, res) => {
     try{
         const offer = await createOffer(req.body, req.user.id,req.locale)
         const popupMessage = successMessages()[req.locale].offer.createOffer
@@ -30,7 +31,31 @@ router.post("/create",PreProcessing,async (req, res) => {
         res.status(statusCode).json(error);
     }
 });
-router.get("/template",PreProcessing,async (req, res) => {
+
+router.get("/my/offers", PreProcessing(entityName), async(req, res) => {
+    try{
+        const offers=await getMyOffers(req.userId);
+        const popupMessage = successMessages()[req.locale].offer.getOffers
+        const response = PostSuccessProcessing(popupMessage, offers)
+        res.status(response.statusCode).json(response)
+    }catch(err){
+        console.log(err);
+        const statusCode = 401;
+        const error = PostErrorProcessing(
+            statusCode,
+            err.formErrors,
+            err.entityName,
+            err.service,
+            err.apiErrorCode,
+            req.locale
+        );
+        res.status(statusCode).json(error);
+    }
+    
+});
+
+
+router.get("/template",PreProcessing(entityName),async (req, res) => {
     try{
         const offer = await offerTemplate(req.body, req.user.id,req.locale)
         const popupMessage = successMessages()[req.locale].offer.createOffer
@@ -50,7 +75,7 @@ router.get("/template",PreProcessing,async (req, res) => {
         res.status(statusCode).json(error);
     }
 });
-router.put("/edit/:offerId", PreProcessing,async (req, res) => {
+router.put("/edit/:offerId", PreProcessing(entityName),async (req, res) => {
     try{
         const offer = await editOffer(req.params.offerId,req.body, req.user.id, req.locale)
         const popupMessage = successMessages()[req.locale].offer.editOffer
@@ -71,7 +96,7 @@ router.put("/edit/:offerId", PreProcessing,async (req, res) => {
     }
 });
 
-router.get("/get/:offerId", PreProcessing, async(req, res) => {
+router.get("/get/:offerId", PreProcessing(entityName), async(req, res) => {
     try{
         const offer = await getOffer(req.params.offerId, req.user.id, req.locale)
         const popupMessage = successMessages()[req.locale].offer.getOffer
@@ -94,7 +119,7 @@ router.get("/get/:offerId", PreProcessing, async(req, res) => {
 });
 
 
-router.get("/getAll", PreProcessing, async(req, res) => {
+router.get("/getAll", PreProcessing(entityName), async(req, res) => {
     try{
         const offers=await getOffers(req.locale);
         const popupMessage = successMessages()[req.locale].offer.getOffers
@@ -116,7 +141,7 @@ router.get("/getAll", PreProcessing, async(req, res) => {
     
 });
 
-router.delete("/delete/:offerId",PreProcessing, async (req, res) => {
+router.delete("/delete/:offerId",PreProcessing(entityName), async (req, res) => {
     try{
         const status=await deleteOffer(req.params.offerId, req.user.id, req.locale)
         const popupMessage = successMessages()[req.locale].offer.deleteOffer
@@ -138,7 +163,7 @@ router.delete("/delete/:offerId",PreProcessing, async (req, res) => {
     }
 });
 
-router.put("/upload/images/:offerId",PreProcessing, ConfigureMulterStorage(UploadValidMimeTypes.IMAGES, UploadedFileTypes.IMAGE, EntityNames.offer, "image"), async (req, res) => {
+router.put("/upload/images/:offerId",PreProcessing(entityName), ConfigureMulterStorage(UploadValidMimeTypes.IMAGES, UploadedFileTypes.IMAGE, EntityNames.offer, "image"), async (req, res) => {
     try{
         const files=await uploadOfferImages(req.locale, req.userId, req.params.offerId, req.file, EntityNames.offer, UploadedFileTypes.IMAGE)
         const popupMessage = successMessages()[req.locale].offer.deleteOffer
@@ -159,6 +184,29 @@ router.put("/upload/images/:offerId",PreProcessing, ConfigureMulterStorage(Uploa
         res.status(statusCode).json(error);
     }
 });
+
+router.put("/add/requests/:offerId", PreProcessing(entityName), async (req, res) => {
+    try{
+        const offer = await addRequests(req.body,req.params.offerId, req.userId, req.locale)
+        const popupMessage = successMessages()[req.locale].offer.editOffer
+        const response = PostSuccessProcessing(popupMessage, offer)
+        res.status(response.statusCode).json(response)
+    }catch(err){
+        console.log(err);
+        const statusCode = 401;
+        const error = PostErrorProcessing(
+            statusCode,
+            err.formErrors,
+            err.entityName,
+            err.service,
+            err.apiErrorCode,
+            req.locale
+        );
+        res.status(statusCode).json(error);
+    }
+});
+
+
 
 module.exports = router
 
